--- a/surie.html
+++ b/surie.html
@@ -7,6 +7,13 @@
   <title>Bootstrap demo</title>
   <link rel="stylesheet" href="./css/frontend.css">
   <link rel="stylesheet" href="./css/surie.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+    integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+    integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
     integrity="sha512-q3eWabyZPc1XTCmF+8/LuE1ozpg5xxn7iO89yfSOd5/oKvyqLngoNGsx8jq92Y8eXJ/IRxQbEC+FGSYxtk2oiw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -17,6 +24,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap"
     rel="stylesheet">
+
   <script src="./js/jquery.js"></script>
 </head>
 
@@ -26,32 +34,32 @@
 
   <!-- ..............header............. -->
 
-  <div class="container">
-    <nav class="navbar position-sticky  navbar-expand-lg ">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="./img/surie.png" alt=""></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon" id="openBtn"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto ">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Products</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-          </ul>
-        </div>
-    </nav>
-  </div>
+
+  <nav class="navbar navbar-expand-lg fixed-top bg-white ">
+    <div class="container">
+      <a class="navbar-brand" href="#"><img src="./img/surie.png" alt=""></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon" id="openBtn"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto ">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Products</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+        </ul>
+      </div>
+  </nav>
+
 
 
 
@@ -83,8 +91,9 @@
 
   <!-- ........................banner..................... -->
 
-  <div class="container">
-    <div class="banner">
+
+  <div class="banner">
+    <div class="container">
       <div class="row py-5">
         <div class="col-md-12">
           <div class="card">
@@ -98,10 +107,12 @@
 
 
 
+
   <!-- ................................ -->
 
-  <div class="container">
-    <div class="product-item">
+
+  <div class="product-item">
+    <div class="container">
       <div class="row">
         <div class="col-md-3 col-sm-6 col-6 ">
           <div class="card">
@@ -129,6 +140,7 @@
       </div>
     </div>
   </div>
+
 
 
 
@@ -234,11 +246,14 @@
 
 
 
+
+
+
   <!-- ..................Offer.................. -->
 
-  <div class="container">
-    <div class="row">
-      <div class="offer">
+  <div class="offer">
+    <div class="container">
+      <div class="row">
         <div class="card">
           <img src="./img/img1.jpg" class="card-img" alt="">
         </div>
@@ -252,11 +267,270 @@
 
 
 
+  <!-- ...................All Categories................... -->
 
-  <!-- ..............script.............. -->
 
-  <script src="./js/surie.js"></script>
-  <script src="./js/frontend.js"></script>
+  <div class="all-categories">
+    <div class="container">
+      <div class="row py-5">
+        <div class="owl-carousel owl-theme">
+          <div class="item">
+            <div class="card">
+              <img class="card-img-top" src="./img/shirt2.jpg" alt="">
+              <div class="card-body ">
+                <div class="card-title">
+                  <h5>anime samurai</h5>
+                  <div class="ratings">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star-half" aria-hidden="true"></i>
+                  </div>
+                  <div class="card-text">
+                    <h5>Rs 899</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+          <div class="item">
+            <div class="card">
+              <img class="card-img-top" src="./img/shirt2.jpg" alt="">
+              <div class="card-body ">
+                <div class="card-title">
+                  <h5>anime samurai</h5>
+                  <div class="ratings">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star-half" aria-hidden="true"></i>
+                  </div>
+                  <div class="card-text">
+                    <h5>Rs 899</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="card">
+              <img class="card-img-top" src="./img/shirt2.jpg" alt="">
+              <div class="card-body ">
+                <div class="card-title">
+                  <h5>anime samurai</h5>
+                  <div class="ratings">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star-half" aria-hidden="true"></i>
+                  </div>
+                  <div class="card-text">
+                    <h5>Rs 899</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="card">
+              <img class="card-img-top" src="./img/shirt2.jpg" alt="">
+              <div class="card-body ">
+                <div class="card-title">
+                  <h5>anime samurai</h5>
+                  <div class="ratings">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star-half" aria-hidden="true"></i>
+                  </div>
+                  <div class="card-text">
+                    <h5>Rs 899</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="card">
+              <img class="card-img-top" src="./img/shirt2.jpg" alt="">
+              <div class="card-body ">
+                <div class="card-title">
+                  <h5>anime samurai</h5>
+                  <div class="ratings">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star-half" aria-hidden="true"></i>
+                  </div>
+                  <div class="card-text">
+                    <h5>Rs 899</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="card">
+              <img class="card-img-top" src="./img/shirt2.jpg" alt="">
+              <div class="card-body ">
+                <div class="card-title">
+                  <h5>anime samurai</h5>
+                  <div class="ratings">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star-half" aria-hidden="true"></i>
+                  </div>
+                  <div class="card-text">
+                    <h5>Rs 899</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="card">
+              <img class="card-img-top" src="./img/shirt2.jpg" alt="">
+              <div class="card-body ">
+                <div class="card-title">
+                  <h5>anime samurai</h5>
+                  <div class="ratings">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star-half" aria-hidden="true"></i>
+                  </div>
+                  <div class="card-text">
+                    <h5>Rs 899</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="card">
+              <img class="card-img-top" src="./img/shirt2.jpg" alt="">
+              <div class="card-body ">
+                <div class="card-title">
+                  <h5>anime samurai</h5>
+                  <div class="ratings">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star-half" aria-hidden="true"></i>
+                  </div>
+                  <div class="card-text">
+                    <h5>Rs 899</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="card">
+              <img class="card-img-top" src="./img/shirt2.jpg" alt="">
+              <div class="card-body ">
+                <div class="card-title">
+                  <h5>anime samurai</h5>
+                  <div class="ratings">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star-half" aria-hidden="true"></i>
+                  </div>
+                  <div class="card-text">
+                    <h5>Rs 899</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="card">
+              <img class="card-img-top" src="./img/shirt2.jpg" alt="">
+              <div class="card-body ">
+                <div class="card-title">
+                  <h5>anime samurai</h5>
+                  <div class="ratings">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star-half" aria-hidden="true"></i>
+                  </div>
+                  <div class="card-text">
+                    <h5>Rs 899</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="card">
+              <img class="card-img-top" src="./img/shirt2.jpg" alt="">
+              <div class="card-body ">
+                <div class="card-title">
+                  <h5>anime samurai</h5>
+                  <div class="ratings">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star-half" aria-hidden="true"></i>
+                  </div>
+                  <div class="card-text">
+                    <h5>Rs 899</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="card">
+              <img class="card-img-top" src="./img/shirt2.jpg" alt="">
+              <div class="card-body ">
+                <div class="card-title">
+                  <h5>anime samurai</h5>
+                  <div class="ratings">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star-half" aria-hidden="true"></i>
+                  </div>
+                  <div class="card-text">
+                    <h5>Rs 899</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+      </div>
+      </div>
+    </div>
+
+
+
+
+
+
+    <!-- ..............script.............. -->
+
+    <script src="./js/surie.js"></script>
+    <script src="./js/frontend.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+      integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+      crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
 
 
