--- a/surie.html
+++ b/surie.html
@@ -35,7 +35,7 @@
   <!-- ..............header............. -->
 
 
-  <nav class="navbar navbar-expand-lg fixed-top bg-white ">
+  <nav class="navbar navbar-expand-lg fixed-top bg-white shadow">
     <div class="container">
       <a class="navbar-brand" href="#"><img src="./img/surie.png" alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -48,13 +48,13 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="#">Products</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="#">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact Us</a>
           </li>
         </ul>
       </div>
@@ -67,8 +67,8 @@
 
 
 
-  <div id="carouselExampleControls" class="carousel slide " data-bs-ride="carousel">
-    <div class="carousel-inner">
+  <div id="carouselExampleControls" class="carousel slide py " data-bs-ride="carousel">
+    <div class="carousel-inner pb-0">
       <div class="carousel-item active">
         <a href="#"><img src="./img/img1.jpg" class="d-block w-100" alt="..."></a>
       </div>
@@ -150,7 +150,7 @@
 
   <div class="container">
     <div class="products">
-      <div class="row py-5 ">
+      <div class="row py-5 pb-0 ">
         <h4 class="text-center">Products</h4>
         <div class="row py-5 mx-auto ">
           <div class="col-md-3 col-sm-6 col-6">
@@ -515,22 +515,73 @@
               </div>
             </div>
           </div>
-      </div>
+        </div>
       </div>
     </div>
 
 
+    <!-- .......................footer..................... -->
+
+    <footer>
+      <div class="row">
+        <!-- <div class="col-md-12"> -->
+        <img src="./img/footer.jpg" style="background-size: cover ;" alt="">
+        <div class="bg"></div>
+        <div class="content">
+          <div class="row justify-content-between">
+            <div class="col-md-3 col-sm-12 py-3 ">
+              <h4>Get to Know Us</h4>
+              <li><a href="#">home</a></li>
+              <li><a href="#">home</a></li>
+              <li><a href="#">home</a></li>
+              <li><a href="#">home</a></li>
+              <li><a href="#">home</a></li>
+              <li><a href="#">home</a></li>
+            </div>
+
+            <div class="col-md-3 col-sm-12 py-3">
+              <h4>Quick Links</h4>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Product</a></li>
+              <li><a href="#">Contact</a></li>
+            </div>
+
+            <div class="col-md-3 col-sm-12 py-3">
+              <h4>All Categories</h4>
+              <li><a href="#">Vaccum Cleaners</a></li>
+              <li><a href="#">Marble Polishing Machine</a></li>
+              <li><a href="#">Chemicals</a></li>
+              <li><a href="#">Products</a></li>
+            </div>
+          </div>
+        </div>
+      </div>
+  </div>
+  <div class="credit text-center p-1">
+    <h6>Created with <i class="fa fa-heart" aria-hidden="true"></i> by nikesh</h6>
+  </div>
+
+  </footer>
 
 
 
 
-    <!-- ..............script.............. -->
+  <!-- .........................credit...................... -->
 
-    <script src="./js/surie.js"></script>
-    <script src="./js/frontend.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
-      integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
-      crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<!-- 
+  <div class="credit text-center p-1">
+    <h6>Created with <i class="fa fa-heart" aria-hidden="true"></i> by nikesh</h6>
+  </div> -->
+
+
+  <!-- ..............script.............. -->
+
+  <script src="./js/surie.js"></script>
+  <script src="./js/frontend.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+    integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
 
 
