--- a/surie.html
+++ b/surie.html
@@ -47,9 +47,17 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Products</a>
-          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Products
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Machine <i class="fa fa-sort-down" aria-hidden="true"></i></a>
+              </li>
+              <li><a class="dropdown-item" href="#">Vaccum <i class="fa fa-sort-down"></i></a></li>
+              <li><a class="dropdown-item" href="#">Scrubber <i class="fa fa-sort-down"></i></a></li>
+            </ul>
+          </li> 
           <li class="nav-item">
             <a class="nav-link" href="#">About Us</a>
           </li>
